# palpad

./: Cargo.toml  README.html  README.md  out.html  palpad.css
files/: index.html  index.md
files/articles/: article1.html  article1.md  article2.html  article2.md
files/general/: general1.html  general1.md  general2.html  general2.md  general3.html  general3.md
src/: main.rs
src/parser/: lexer.rs  parser.rs
src/types/: elements.rs
