[package]
name = "palpad"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A really simple static site generator"
homepage = "https://git.spacejunk.sh/palpad.git"
repository = "https://git.spacejunk.sh/palpad.git"
readme = "README.md"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }


